# stuff

./: .env.example  .eslintrc.cjs  .gitignore  .mocharc.cjs  Anchor.toml  README.md  package.json  tsconfig.json
keys/: README.md  test-fee-payer.json
keys/test-tokens/: EcFhFLpDPeGXuFaJY3gLHTeCJT4FLeRbnL9DRE444FCG.json
programs/smallet/: Cargo.toml
programs/smallet/src/: constants.rs  events.rs  lib.rs  state.rs
programs/smallet/src/instructions/: approve.rs  change_threshold.rs  create_guadian_action.rs  create_smallet.rs  create_subaccount.rs  create_transaction.rs  execute_transaction.rs  initialize_global_state.rs  lock_smallet.rs  mod.rs  owner_invoke.rs  set_frozen.rs  set_frozen_admin.rs  set_global_thresholds.rs  set_owners.rs  set_session.rs  transfer_global_admin.rs  try_action_with_sign.rs
programs/soulboundsigner/: Cargo.toml
programs/soulboundsigner/src/: account_validators.rs  lib.rs
src/: constants.ts  sdk.ts
src/idls/: smallet.ts  soulboundsigner.ts
src/programs/: smallet.ts
src/wrappers/smallet/: index.ts  pda.ts  types.ts
tests/: common.ts  fakeTokens.ts  workspace.ts
tests/actions/: configTokenFeeAsAdmin.spec.ts  createAccountIfTokenFeePaid.spec.ts  signIfTokenFeePaid.spec.ts
tests/smallet/: main.spec.ts  sponsor.spec.ts
